--- a/config
+++ b/config
@@ -44,7 +44,7 @@ values."
    ;; wrapped in a layer. If you need some configuration for these
    ;; packages, then consider creating a layer. You can also put the
    ;; configuration in `dotspacemacs/user-config'.
-   dotspacemacs-additional-packages '(editorconfig)
+   dotspacemacs-additional-packages '(editorconfig tabbar-ruler)
    ;; A list of packages and/or extensions that will not be install and loaded.
    dotspacemacs-excluded-packages '()
    ;; If non-nil spacemacs will delete any orphan packages, i.e. packages that
@@ -251,6 +251,11 @@ layers configuration. You are free to put any user code."
     (linum-relative-toggle)
     )
   dotspacemacs-startup-lists '(projects)
+  (tabbar-mode)
+  (tabbar-ruler-forward)
+  (tabbar-ruler-group-by-projectile-project)
+  (global-set-key (kbd "C-c f") 'tabbar-ruler-forward)
+  (global-set-key (kbd "C-c b") 'tabbar-ruler-backward)
   )
 
 ;; Do not write anything past this comment. This is where Emacs will
