--- a/config
+++ b/config
@@ -244,15 +244,21 @@ in `dotspacemacs/user-config'."
 This function is called at the very end of Spacemacs initialization after
 layers configuration. You are free to put any user code."
   evil-insert-state-cursor 'bar
+  (setq neo-theme 'arrow)
   (editorconfig-mode 1)
   (editorconfig-apply)
   (global-linum-mode)
+  (set-default 'truncate-lines f)
   (with-eval-after-load 'linum
     (linum-relative-toggle)
     )
   dotspacemacs-startup-lists '(projects)
-  (tabbar-mode)
+  (tabbar-mode 1)
   (tabbar-ruler-forward)
+  (setq tabbar-ruler-global-tabbar t)
+  (setq tabbar-ruler-popup-menu t)
+  (setq tabbar-ruler-popup-toolbar t)
+  (setq tabbar-ruler-popup-scrollbar t)
   (tabbar-ruler-group-by-projectile-project)
   (global-set-key (kbd "C-c f") 'tabbar-ruler-forward)
   (global-set-key (kbd "C-c b") 'tabbar-ruler-backward)
