--- a/config
+++ b/config
@@ -498,6 +498,7 @@ before packages are loaded."
 (defun my/bootstrap-autocomplete ()
   (global-company-mode)
   (global-set-key (kbd "C-SPC") 'company-complete)
+  (setq company-idle-delay nil)
   )
 
 (defun my/bootstrap-whitespace ()
