--- a/config
+++ b/config
@@ -435,7 +435,7 @@ It should only modify the values of Spacemacs settings."
    ;; %z - mnemonics of buffer, terminal, and keyboard coding systems
    ;; %Z - like %z, but including the end-of-line format
    ;; (default "%I@%S")
-   dotspacemacs-frame-title-format "%t@aS"
+   dotspacemacs-frame-title-format "%a@%t <%m>"
 
    ;; Format specification for setting the icon title format
    ;; (default nil - same as frame-title-format)
